[package]
name = "auction-api"
version = "0.1.0"
authors = ["Marek Vrbka <xvrbka3@mail.muni.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.0"
actix-web = "2.0.0"

diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
serde = "1.0.106"
serde_json = "1.0.52"
ring = "0.16.12"
chrono = { version = "0.4.11", features = ["serde"] }
